<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvComputerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/computer"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/ivComputer"
            app:layout_constraintStart_toStartOf="@+id/ivComputer"
            app:layout_constraintTop_toBottomOf="@+id/ivComputer" />

        <ImageView
            android:id="@+id/ivYou"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvVersus"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:srcCompat="@color/colorPrimaryDark" />

        <ImageView
            android:id="@+id/ivComputer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toStartOf="@+id/tvVersus"
            app:layout_constraintHorizontal_bias="0.75"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result"
            app:srcCompat="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/gameDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/result" />

        <TextView
            android:id="@+id/tvVersus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vs"
            android:textSize="30sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="@+id/ivComputer"
            app:layout_constraintEnd_toStartOf="@+id/ivYou"
            app:layout_constraintStart_toEndOf="@+id/ivComputer"
            app:layout_constraintTop_toTopOf="@+id/ivYou" />

        <TextView
            android:id="@+id/tvYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/you"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/ivYou"
            app:layout_constraintStart_toStartOf="@+id/ivYou"
            app:layout_constraintTop_toBottomOf="@+id/ivYou" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvComputerName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>